# lookas

./: .clippy.toml  Cargo.toml  README.md  justfile  rlyx.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yaml
.github/actions/base-runner/: action.yml
.github/actions/setup/: action.yml
.github/scripts/: check-version
.github/workflows/: ci.yml  on-workflow-call-build.yml  on-workflow-call-check.yml  on-workflow-call-format.yml  on-workflow-call-lint.yml  on-workflow-call-release.yml  on-workflow-call-test.yml
scripts/: check-version
src/: analyzer.rs  audio.rs  buffer.rs  config.rs  dsp.rs  filterbank.rs  lib.rs  main.rs  render.rs  utils.rs
src/analyzer/: bands.rs  mod.rs  params.rs  spectrum.rs  spring.rs
src/app/: fft.rs  gate.rs  input.rs  mix.rs  mod.rs  run.rs
src/app/rn/: frame.rs  runtime.rs
src/audio/: device.rs  mic.rs  mod.rs  stream.rs
src/audio/system/: linux.rs  mod.rs  stub.rs
src/dsp/: ema.rs  mel.rs  mod.rs  weighting.rs  window.rs
src/filterbank/: filters.rs  mel_bins.rs  mod.rs
src/render/: draw.rs  layout.rs  mod.rs
tests/: analyzer.rs  buffer.rs  dsp.rs  filterbank.rs
