[package]
name = "lookas"
version = "1.5.1"
edition = "2021"

description = "Perception aligned terminal-based audio spectrum visualizer"
readme = "README.md"
license = "MIT"

repository = "https://github.com/rccyx/lookas"
homepage = "https://github.com/rccyx/lookas"
documentation = "https://docs.rs/lookas"

keywords = [
  "audio",
  "audio-visualizer",
  "spectrum-analyzer",
  "music",
  "sound"
]

categories = [
  "multimedia::audio",
  "visualization",
  "command-line-utilities",
  "multimedia"
]

[dependencies]
anyhow = "1.0"
cpal = "0.15"
crossterm = "0.27"
dirs = "5.0"
rustfft = "6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
