[package]
name = "lookas"
version = "1.7.1"
edition = "2021"
authors = ["@rccyx <https://rccyx.com>"]
description = "Perception aligned terminal-based audio spectrum visualizer"
readme = "README.md"
license = "MIT"
repository = "https://github.com/rccyx/lookas"
homepage = "https://github.com/rccyx/lookas"
documentation = "https://github.com/rccyx/lookas"
keywords = ["audio", "audio-visualizer", "spectrum-analyzer", "terminal", "physics"]
categories = ["multimedia::audio", "visualization", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
cpal = "0.15"
realfft = "3.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true